--- a/public/index.html
+++ b/public/index.html
@@ -83,12 +83,12 @@
 
     <script src="/js/core/livekit.js?v={{random}}"></script>
     <script src="/js/core/memberlist.js?v={{random}}"></script>
-    <script src="/js/core/FileManager.js?v={{random}}"></script>
+    <script src="/js/libs/file-manager/FileManager.js?v={{random}}"></script>
     <script src="/js/core/ModView.js?v={{random}}"></script>
     <script src="/js/core/UserReports.js?v={{random}}"></script>
     <script src="/js/core/ContextMenu.js?v={{random}}"></script>
     <script src="/js/docs.js?v={{random}}"></script>
-    <script src="/js/elementloader.js?v={{random}}"></script>
+    <script src="/js/libs/element-loader/ElementLoader.js?v={{random}}"></script>
     <script src="/js/markdown.js?v={{random}}"></script>
     <script src="/js/core/markdown-parser.js?v={{random}}"></script>
     <script src="/js/emojis.js?v={{random}}"></script>
