--- a/public/settings/account/index.html
+++ b/public/settings/account/index.html
@@ -22,8 +22,11 @@
 
 
     <script defer src="/js/prompts.js?v={{random}}"></script>
-    <script defer src="../../js/core/CookieManager.js"></script>
-    <script defer src="../../js/core/UserManager.js"></script>
+    <script defer src="/js/core/PageRenderer.js"></script>
+    <script defer src="/js/core/ContextMenu.js"></script>
+    <script defer src="/js/core/ChatManager.js"></script>
+    <script defer src="/js/core/CookieManager.js"></script>
+    <script defer src="/js/core/UserManager.js"></script>
     <script defer type="text/javascript" src="/js/core/PoW.js"></script>
     <script defer type="text/javascript" src="/js/core/FileManager.js"></script>
     <script defer type="text/javascript" src="../utility.js"></script>
